added defuse/encryption to vendor

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 
     "require": {
         "swiftmailer/swiftmailer": "^5.4",
-        "tinymce/tinymce": "= 4.1.7"
+        "tinymce/tinymce": "= 4.1.7",
+        "defuse/php-encryption": "^2.0"
     },
 
     "autoload" : {
