--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # project files
-config.php
+/config.php
+/admin/config.php
+*.htaccess
 
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
