updated gitignore,editedrudactions to use Model as input for funcs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # project files
 /config.php
 /admin/config.php
+/admin/uploads/**
 *.htaccess
 
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
